[gd_scene load_steps=8 format=3 uid="uid://d1ks7qehfn7tw"]

[ext_resource type="Script" path="res://units/penguin.gd" id="1_3hqrq"]
[ext_resource type="PackedScene" uid="uid://d3dkhdmcbd5lv" path="res://helpers/click_pos_indicator.tscn" id="2_l2bv5"]
[ext_resource type="PackedScene" uid="uid://bctbjlv10nwn8" path="res://helpers/goal_pos_indicator.tscn" id="2_unhtt"]
[ext_resource type="PackedScene" uid="uid://cksr5eenpn62i" path="res://helpers/unit_nav_debug_box.tscn" id="3_a3a84"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jvufi"]
albedo_color = Color(0.454902, 0.607843, 0.737255, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_su0u1"]
material = SubResource("StandardMaterial3D_jvufi")
radius = 0.1
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6y24a"]
radius = 0.1
height = 0.5

[node name="penguin" type="RigidDynamicBody3D" groups=["units"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 62.0
script = ExtResource("1_3hqrq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("CapsuleMesh_su0u1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CapsuleShape3D_6y24a")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.4
target_desired_distance = 0.3
path_max_distance = 60.0
avoidance_enabled = true
radius = 0.15
neighbor_dist = 5.0

[node name="DebugTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]

[node name="DebugNodes" type="Node3D" parent="."]
visible = false

[node name="ClickPosIndicator2" parent="DebugNodes" instance=ExtResource("2_l2bv5")]

[node name="GoalPosIndicator" parent="DebugNodes" instance=ExtResource("2_unhtt")]
skeleton = NodePath("../..")

[node name="UnitNavDebugBox" parent="DebugNodes" instance=ExtResource("3_a3a84")]
skeleton = NodePath("../..")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.705882, 0, 0.968627)
offset_right = 24.0
offset_bottom = 5.0
mouse_filter = 2
value = 100.0
percent_visible = false

[node name="TopOfHead" type="Position3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.499649, 0)

[node name="PathLine" type="Node3D" parent="."]

[connection signal="input_event" from="." to="." method="_on_penguin_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_penguin_sleeping_state_changed"]
[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="DebugTimer" to="." method="_on_debug_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
